# python-manager

./: .gitattributes  .gitignore  CHANGES.rst  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build_docs.yaml  pythonapp.yml
docs/: Makefile  api.rst  conf.py  index.rst  requirements.txt  usage.rst
tfmanager/: __init__.py  _version.py  cli.py  io.py  osf.py  utils.py
