[metadata]
url = https://github.com/templateflow/python-manager

[options]
python_requires = >= 3.6
install_requires =
    click
    datalad
    osfclient
    templateflow >= 0.4.2
packages = find:

[options.packages.find]
exclude =
    *.tests

[options.entry_points]
console_scripts =
    tfmgr=tfmanager.cli:main

[versioneer]
VCS = git
style = pep440
versionfile_source = tfmanager/_version.py
versionfile_build = tfmanager/_version.py
tag_prefix =
parentdir_prefix =

[flake8]
max-line-length = 99
doctests = False
exclude=*build/
ignore =
    W503

[tool:pytest]
norecursedirs = .git
addopts = -svx
doctest_optionflags = ALLOW_UNICODE NORMALIZE_WHITESPACE
env =
    PYTHONHASHSEED=0
filterwarnings =
    ignore::DeprecationWarning

[coverage:run]
branch = True
