[metadata]
author = The NiPreps developers
author_email = nipreps@gmail.com
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Image Recognition
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
description = TemplateFlow Manager eases the process of contributing to the Archive
license = Apache-2.0
long_description = file:README.rst
long_description_content_type = text/x-rst; charset=UTF-8
name = tfmanager
project_urls =
    Home = https://www.templateflow.org
url = https://github.com/templateflow/python-manager

[options]
python_requires = >= 3.6
setup_requires =
    setuptools >= 42.0
    setuptools_scm >= 3.4
    toml
install_requires =
    click
    datalad
    osfclient
    templateflow >= 0.4.2
packages = find:

[options.packages.find]
exclude =
    *.tests

[options.entry_points]
console_scripts =
    tfmgr=tfmanager.cli:cli

[flake8]
max-line-length = 99
doctests = False
exclude=*build/
ignore =
    W503

[tool:pytest]
norecursedirs =
	.git
	.github
addopts = -svx  --doctest-modules
doctest_optionflags = ALLOW_UNICODE NORMALIZE_WHITESPACE
env =
    PYTHONHASHSEED=0
filterwarnings =
    ignore::DeprecationWarning

[coverage:run]
branch = True
